--- a/00-L2-CS2B-ASI-MARCH-2022/L2-Question3.Rmd
+++ b/00-L2-CS2B-ASI-MARCH-2022/L2-Question3.Rmd
@@ -56,52 +56,83 @@ v) Comment whether ARMA(2,2) can be inferred from the ACF and PACF plots. (3)
  [25 Marks]
 Solution 3:
 (i)
+
+```{r}
 set.seed(100) 
 z=2+arima.sim(n=300,list(ar=c(0.8,0.1),ma=c(0.4,0.1),sd=7^0.5))
 plot(z, xlab = "Time", ylab = "Simulated Values from an ARMA(2,2) Time Series
 ", main = "Time Series Plot")
 (4)
-IAI CS2B-0322
-Page 8 of 14
+
+```
+
+---
+  
 # (ii)
 # (a)
+
+```{r}
 mean (z)
 ## [1] 1.520674
 sd(z)
 ## [1] 5.865453
 # (b)
+```
+
+---
+
+```{r}
 mean(z[1:150])
 ## [1] 0.678429
 sd(z[1:150])
 ## [1] 4.997272
+```
+
+---
+
+```{r}
 # (c)
 mean(z[151:300])
 ## [1] 2.362919
 sd(z[151:300])
 ## [1] 6.529698
-(6)
+```
+
+---
+
+```{r}
 # (iii)
 acf(z, xlab = "Lag", ylab = "ACF of Simulated Values from an ARMA(2,2) Time S
 eries", main = "ACF") 
-IAI CS2B-0322
-Page 9 of 14
+
+```
+
+---
+
+```{r}
 pacf(z, xlab = "Lag", ylab = "Partial ACF of Simulated Values from an ARMA(2,
 2) Time Series", main = "PACF")
- (4)
+```
+
+---
 # (iv)
-# The series appears stationary as there are no obvious trends or cycles in t
+
+* The series appears stationary as there are no obvious trends or cycles in t
 he graph of the series and it appears to have constant mean. 
-# However, from (ii), it appears that mean of the two subsets of the data is 
+*  However, from (ii), it appears that mean of the two subsets of the data is 
 very different.
-# Working with a larger subset takes the mean values closer to constant thus 
+* Working with a larger subset takes the mean values closer to constant thus 
 revealing in stationarity. 
-# For a stationary time series, the ACF will drop to zero relatively quickly, 
+* For a stationary time series, the ACF will drop to zero relatively quickly, 
 while the ACF of non-stationary data decreases slowly 
 # Hence, we confirm that the series is stationary
- (3)
+
+---
+
 # (v)
-# PACF becomes insignificant after two lags and ACF goes gradually to zero in
+ PACF becomes insignificant after two lags and ACF goes gradually to zero in
 dicating the strong presence of AR(2)process compared to an ARMA (2,2) models
-# In ARMA(2,2) model, we should observe, ACF and PACF to gradually go down to 
+ In ARMA(2,2) model, we should observe, ACF and PACF to gradually go down to 
 zero after a few lags
- (3)
+
+---
