--- a/00-J2-CS2B-ASI-September-2021/Question_5-Decision-trees.Rmd
+++ b/00-J2-CS2B-ASI-September-2021/Question_5-Decision-trees.Rmd
@@ -130,8 +130,7 @@ Page 13 of 13
 ---
 ```{r}
 # (vi)
-table(pred,test_Data$type) [4M]
-## 
+table(pred,test_Data$type) 
 ## pred No Yes
 ## No 67 22
 ## Yes 3 8
