--- a/00-L2-CS2B-ASI-MARCH-2022/L2-Question3.Rmd
+++ b/00-L2-CS2B-ASI-MARCH-2022/L2-Question3.Rmd
@@ -38,48 +38,58 @@ pre {
 ---
 
 MA(2,2) time series Zt is defined by the following equation
-Zt=2 + 0.8Zt-1 + 0.1Zt-2 + et + 0.4et-1 + 0.1et-2 , where et are white noise terms which are IID 
+$$Zt=2 + 0.8Zt-1 + 0.1Zt-2 + et + 0.4et-1 + 0.1et-2$$ , where et are white noise terms which are IID 
 random variables with mean 0 and σ2= 7
+
 i) Simulate 300 observations of the above time series using seed value equal to 100 and plot 
 it giving appropriate labels for each axis. Paste the plot into your answer sheet. (4)
 ii) Using the data simulated in (i), compute the mean and standard deviation of 
 a) The entire series
 b) The first 150 observations of the series
-c) The last 150 observations of the series (6)
+c) The last 150 observations of the series 
+
+---
+
 iii) Plot the Autocorrelation function (ACF) and Partial Autocorrelation function (PACF) of 
 the simulated data in (i), giving appropriate labels for each axis. Paste the plots into your 
-answer sheet. (4)
+answer sheet. 
+
 iv) Comment on the stationarity of data from (ii) and (iii) above. (3)
+
 v) Comment whether ARMA(2,2) can be inferred from the ACF and PACF plots. (3)
 
 ---
- [25 Marks]
-Solution 3:
-(i)
+
+### Solution :
+
+#### Part (i)
 
 ```{r}
 set.seed(100) 
 z=2+arima.sim(n=300,list(ar=c(0.8,0.1),ma=c(0.4,0.1),sd=7^0.5))
-plot(z, xlab = "Time", ylab = "Simulated Values from an ARMA(2,2) Time Series
-", main = "Time Series Plot")
-(4)
+
+plot(z, xlab = "Time", 
+  ylab = "Simulated Values from an ARMA(2,2) Time Series", 
+  main = "Time Series Plot")
 
 ```
 
 ---
   
-# (ii)
-# (a)
+#### Part (ii)
+#### (a)
 
 ```{r}
 mean (z)
 ## [1] 1.520674
 sd(z)
 ## [1] 5.865453
-# (b)
+
 ```
 
 ---
+
+#### (b)
 
 ```{r}
 mean(z[1:150])
@@ -115,7 +125,7 @@ pacf(z, xlab = "Lag", ylab = "Partial ACF of Simulated Values from an ARMA(2,
 ```
 
 ---
-# (iv)
+#### Part (iv)
 
 * The series appears stationary as there are no obvious trends or cycles in t
 he graph of the series and it appears to have constant mean. 
@@ -129,7 +139,7 @@ while the ACF of non-stationary data decreases slowly
 
 ---
 
-# (v)
+#### Part (v)
  PACF becomes insignificant after two lags and ACF goes gradually to zero in
 dicating the strong presence of AR(2)process compared to an ARMA (2,2) models
  In ARMA(2,2) model, we should observe, ACF and PACF to gradually go down to 
